# CrewAI_Debate_System

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/crewai_debate_system/: main.py
