[project]
name = "crewai_debate_system"
version = "0.1.0"
description = "CrewAI_Debate_System using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
crewai_debate_system = "crewai_debate_system.main:run"
run_crew = "crewai_debate_system.main:run"
train = "crewai_debate_system.main:train"
replay = "crewai_debate_system.main:replay"
test = "crewai_debate_system.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
